fix(FEC-14055): z-index fix for small-size of side-panel

--- a/src/components/side-panel/_side-panel.scss
+++ b/src/components/side-panel/_side-panel.scss
@@ -5,7 +5,7 @@
   z-index: 0;
   &.small-size {
     // for small sizes the side panel should be over player controls
-    z-index: 1;
+    z-index: 2;
   }
 }
 
